--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,34 +7,24 @@
       <title>Darkly</title>
    </head>
    <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-         <div class="container">
-            <a class="container navbar-brand" href="{{ url_for('home_page') }}">Awesome Company</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-               data-target="#navbarResponsive" aria-controls="navbarResponsive"
-               aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="{{ url_for('home_page') }}">home
-                     <span class="sr-only">(current)</span>
-                     </a>
-                  </li>
-                   <li class="nav-item">
-                     <a class="nav-link" href="{{ url_for('sign_up') }}">signup</a>
-                  </li>
-                   <li class="nav-item">
-                     <a class="nav-link" href="#">about</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="#">services</a>
-                  </li>
-               </ul>
-            </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <a class="navbar-brand" href="{{ url_for('home_page') }}">Aritmetrica</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+       
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav mr-auto">
+             <li class="nav-item active">
+               <a class="nav-link" href="{{ url_for('spotify100') }}">Spotify <span class="sr-only">(current)</span></a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="{{ url_for('youtube100') }}">Youtube</a>
+             </li>
+
+           </ul>
          </div>
-      </nav>
+       </nav>
    {% block content %} {% endblock %}
 
    {% with messages = get_flashed_messages() %}
